Updated PR and BedKom content

--- a/public/locales/en/vervPage.json
+++ b/public/locales/en/vervPage.json
@@ -85,8 +85,8 @@
         },
         "bedkom": {
             "title": "Bedkom",
-            "intro": "Bedkom is the face of Login, and they are responsible for our social media.",
-            "body": "With verv in Bedkom you will help communicate both with our students, and our companies. Bedkom promotes events and other topics related to Login in social media. Bedkom also helps with recruitment. Wether you are a good photographer, or just wants to be our next Logfluencer, this is the committee for you."
+            "intro": "Bedkom is the face of Login towards companies, and they are responsible for our company presentations and cyberdays.",
+            "body": "With verv in Bedkom you will help communicate both with our students, and our companies. Bedkom promotes events and other topics related to Login in social media. Bedkom also helps with recruitment. Here you will be able to make a difference for the students, at the same time as you get to know companies."
         },
         "ctfkom": {
             "title": "CTFkom",
@@ -100,8 +100,8 @@
         },
         "pr":{
             "title": "PR",
-            "intro": "they didn't give me a intro to put here...",
-            "body": "PR is Login's graphic committee and is responsible for managing Login's public media channels. PR produces all the necessary graphic materials to promote the student organization and all our events, and designs all the merch and graphic content for random projects that arise. PR also provides a photographer for every event to document Login's history as it happens"
+            "intro": "PR is the face of Login, and they are responsible for our social media.",
+            "body": "PR is Login's graphic committee and is responsible for managing Login's public media channels. PR produces all the necessary graphic materials to promote the student organization and all our events, and designs all the merch and graphic content for random projects that arise. PR also provides a photographer for every event to document Login's history as it happens. Whether you are a good photographer, or just wants to be our next Logfluencer, this is the committee for you."
         }
     },
     "apply": {
