--- a/public/locales/nb/vervPage.json
+++ b/public/locales/nb/vervPage.json
@@ -86,8 +86,8 @@
         },
         "bedkom": {
             "title": "Bedkom",
-            "intro": "Bedkom er Logins ansikt utad og har ansvar for Logins offentlige mediekanaler",
-            "body": "Med verv i Bedkom vil du være med på å kommunisere med både studentene våre og bedriftene våre. Bedkom promoterer arrangementer og andre ting som angår Login i sosiale medier. Bedkom bistår også med rekruttering. Enten du er flink til å ta bilder, eller vil bli en Logfluencer er dette komitéen for deg."
+            "intro": "Bedkom er Logins ansikt mot bedriftene, og har ansvar for bedriftspresentasjoner og karrieredager.",
+            "body": "Med verv i Bedkom vil du være med på å kommunisere med både studentene våre og bedriftene våre. Bedkom promoterer arrangementer og andre ting som angår Login i sosiale medier. Bedkom bistår også med rekruttering. Dersom du ønsker å gjøre en forskjell for studenter, samtidig som du blir kjent med bedrifter er dette komiteen for deg."
         },
         "ctfkom": {
             "title": "CTFkom",
@@ -101,8 +101,8 @@
         },
         "pr":{
             "title": "PR",
-            "intro": "de gav meg ikke noen intro å putte her...",
-            "body": "PR er Logins grafiske komité og har ansvar for å drifte Logins offentlige mediakanaler. PR lager det som trengs av grafisk materiale for å kunne promotere linjeforeningen og alle våre arrangementer, samt designer de alt av merch og grafisk innhold til randome prosjekter som kommer opp. PR stiller også opp med fotograf på samtlige arrangementer for å dokumentere historien til Login, mens den skjer!"
+            "intro": "PR er Logins ansikt utad og har ansvar for Logins offentlige mediekanaler.",
+            "body": "PR er Logins grafiske komité og har ansvar for å drifte Logins offentlige mediakanaler. PR lager det som trengs av grafisk materiale for å kunne promotere linjeforeningen og alle våre arrangementer, samt designer de alt av merch og grafisk innhold til randome prosjekter som kommer opp. PR stiller også opp med fotograf på samtlige arrangementer for å dokumentere historien til Login, mens den skjer! Enten du er flink til å ta bilder, eller vil bli en Logfluencer er dette komitéen for deg."
         }
     },
     "apply": {
