Fikset stor P på json filen på nb i aboutPage

--- a/public/locales/nb/aboutPage.json
+++ b/public/locales/nb/aboutPage.json
@@ -4,7 +4,7 @@
   "bachelor": {
     "computerEngineer": "Dataingeniør",
     "digsec": "Digital infrastruktur og cybersikkerhet",
-    "prog": "programmering "
+    "prog": "Programmering"
   },
   "master": {
     "infosec": "Information security",
