--- a/public/locales/nb/eventPage.json
+++ b/public/locales/nb/eventPage.json
@@ -28,7 +28,8 @@
     "signup-open": "Åpner",
     "signup-closed": "Stengt",
     "no-signup": "Dette arrangementet krever ingen påmelding",
-    "signup-full": "Arrangementet er fullt"
+    "signup-full": "Arrangementet er fullt",
+    "signup-deadline": "Frist"
   },
   "published" : "PUBLISERT",
   "rules": "Regler"
