event sign up adjustments

--- a/public/locales/nb/eventPage.json
+++ b/public/locales/nb/eventPage.json
@@ -26,7 +26,7 @@
     "signup": "Påmelding",
     "signup-action": "Meld meg på",
     "signup-open": "Åpner",
-    "signup-closed": "Stengt",
+    "signup-closed": "Påmeldingen er stengt",
     "no-signup": "Dette arrangementet krever ingen påmelding",
     "signup-full": "Arrangementet er fullt",
     "signup-deadline": "Frist"
