--- a/public/locales/nb/aboutPage.json
+++ b/public/locales/nb/aboutPage.json
@@ -52,8 +52,8 @@
     },
     "bedkom": {
       "title": "Bedkom",
-      "intro": "Bedkom er Logins gyldene ku og uten dem hadde ikke pengene strømmet inn og ingen av de andre komiteene kunne drevet med sprell!",
-      "body": "Bedkom er Logins ansikt utad og har ansvar for Logins offentlige mediakanaler. Bedkom følger med på vårt ticketsystem og svarer bedriftskontakter. De jobber også for å gi studenter et innsyn og vei inn i næringslivet ved å arrangere bedpresser, workshops/fagpres og karrieredager, som også er Logins hovedinntektskilde! Videre er Bedkom med på å representere Login på events og bistår også med rekruttering av nye medlemmer."
+      "intro": "BedKom sørger for at vi tjener inn den største andelen av inntekten vår, hvor pengene går tilbake til studentene våre, i form av alle de spennende arrangementene som de andre komiteene våre driver med!",
+      "body": "BedKom er Logins ansikt utad mot bedriftsrepresentantene som kommer på besøk på campus i Gjøvik. BedKom sitter med mesteparten av kommunikasjonen til bedriftskontaktene på vårt ticketsystem, og svarer på mail og henvendelser som kommer inn. De jobber også for å gi studenter innsyn og en vei inn i næringslivet ved å arrangere bedpreser og karrieredager, som også er Logins hovedinntektskilde!"
     },
     "ctfkom": {
       "title": "CTFkom",
