--- a/public/locales/en/policy.json
+++ b/public/locales/en/policy.json
@@ -37,7 +37,7 @@
         },
         {
             "subtitle": "Contact Information",
-            "description": "For any inquiries, comments, or concerns about this Privacy Policy or our data practices, please contact us at [kontakt@login.no](mailto:kontakt@login.no). We are dedicated to promptly addressing any inquiries or issues and ensuring that your privacy rights are duly respected and safeguarded."
+            "description": "For any inquiries, comments, or concerns about this Privacy Policy or our data practices, please contact us using the information further down on the page. We are dedicated to promptly addressing any inquiries or issues and ensuring that your privacy rights are duly respected and safeguarded."
         },
         {
             "subtitle": "",
