--- a/public/locales/nb/policy.json
+++ b/public/locales/nb/policy.json
@@ -18,7 +18,7 @@
     "updates": "Policy Updates",
     "updatesDescription": "We retain the right to update, modify, or amend this Privacy Policy at any time without prior notice. Any alterations to this Policy will be effective immediately upon posting on the App. We encourage users to periodically review this Privacy Policy to stay abreast of how we collect, utilize, and safeguard their information.",
     "contact": "Contact Information",
-    "contactDescription": "For any inquiries, comments, or concerns about this Privacy Policy or our data practices, please contact us at [kontakt@login.no](mailto:kontakt@login.no). We are dedicated to promptly addressing any inquiries or issues and ensuring that your privacy rights are duly respected and safeguarded.",
+    "contactDescription": "For any inquiries, comments, or concerns about this Privacy Policy or our data practices, please contact us using the information further down on the page. We are dedicated to promptly addressing any inquiries or issues and ensuring that your privacy rights are duly respected and safeguarded.",
     "download": "By downloading, installing, or using the Login App, you indicate your acceptance of this Privacy Policy. If you disagree with any aspect of this Policy, we kindly request refraining from using the App. We appreciate your trust in us and remain steadfast in upholding the highest standards of privacy and data protection for our users."
   },
   "contact": {
