Feature/dropdown menu

--- a/public/locales/en/layout.json
+++ b/public/locales/en/layout.json
@@ -3,8 +3,9 @@
     "about": "About",
     "events": "Events",
     "jobad": "Career",
-    "verv":"Verv",
-    "companies": "For companies"
+    "verv": "Verv",
+    "companies": "For companies",
+    "general": "Who are we?"
   },
   "footer": {
     "sponsor": "Main partner",
