--- a/public/locales/nb/layout.json
+++ b/public/locales/nb/layout.json
@@ -3,8 +3,9 @@
     "about": "Om oss",
     "events": "Arrangementer",
     "jobad": "Karriere",
-    "verv":"Verv",
-    "companies": "For bedrifter"
+    "verv": "Verv",
+    "companies": "For bedrifter",
+    "general": "Hvem er vi?"
   },
   "footer": {
     "sponsor": "Hovedsamarbeidspartner",
