--- a/public/locales/nb/layout.json
+++ b/public/locales/nb/layout.json
@@ -8,6 +8,15 @@
     "general": "Hvem er vi?"
   },
   "footer": {
+    "contactInfo": {
+      "address": {
+        "header": "Adresse",
+        "info1": "Teknologivegen 22",
+        "info2": "Bygg A, rom 155",
+        "info3": "2815 GJØVIK"
+      },
+      "email": "Epost"
+    },
     "sponsor": "Hovedsamarbeidspartner",
     "copy1": "Opphavsrett &copy; ",
     "copy2": " Login - Linjeforeningen for IT, NO 811 940 372"
