sry for large commit, too many changes that effect each other. new page grid system, new eventcards, lots of other changes

--- a/public/locales/en/vervPage.json
+++ b/public/locales/en/vervPage.json
@@ -1,6 +1,7 @@
 {
     "title": "Verv",
-    "intro": "Verv is a voluntary position for those with an extra passion or desire to make a change for the better in Login. Verv gives extra responsibility, meaning more effort is required. Consecutively it creates opportunities to establish new relationships, for example by participating in our intern events.",
+    "intro": "Verv is a voluntary position for those with an extra passion or desire to make a change for the better in Login.",
+    "intro2": "Verv gives extra responsibility, meaning more effort is required. Consecutively it creates opportunities to establish new relationships, for example by participating in our intern events.",
     "imageCarousel": {
         "1": {
             "title": "Anders, previous leader of Login",
