--- a/public/locales/nb/vervPage.json
+++ b/public/locales/nb/vervPage.json
@@ -1,6 +1,7 @@
 {
     "title": "Verv",
-    "intro": "Verv er en frivillig stilling for de som brenner for eller ønsker å gjøre en ekstra innstats for Login. Verv gir ekstra ansvar og krever dermed mer innsats. Samtidig gir det en fantatisk mulighet til å stifte nye vennskap, blant annet ved å kunne delta på interne arrangementer.",
+    "intro": "Verv er en frivillig stilling for de som brenner for eller ønsker å gjøre en ekstra innstats for Login.",
+    "intro2": "Et verv gir ekstra ansvar og krever dermed mer innsats. Samtidig gir det en fantatisk mulighet til å stifte nye vennskap, blant annet ved å kunne delta på interne arrangementer.",
     "imageCarousel": {
         "1": {
             "title": "Anders, tidligere leder av Login",
