--- a/public/locales/en/jobadListPage.json
+++ b/public/locales/en/jobadListPage.json
@@ -1,4 +1,5 @@
 {
     "title" : "Job Listings",
-    "load-more" : "Load more"
+    "load-more" : "Load more",
+    "noResults" : "No results..."
 }
