--- a/public/locales/en/tags.json
+++ b/public/locales/en/tags.json
@@ -2,5 +2,6 @@
     "highlight": "Highlighted",
     "new": "New",
     "canceled": "Canceled",
-    "full": "Full"
+    "full": "Full",
+    "ongoing": "Ongoing"
 }
