--- a/public/locales/nb/jobadListPage.json
+++ b/public/locales/nb/jobadListPage.json
@@ -1,4 +1,5 @@
 {
     "title" : "Jobbannonser",
-    "load-more" : "Last inn flere"
+    "load-more" : "Last inn flere",
+    "noResults" : "Ingen treff..."
 }
