--- a/public/locales/nb/tags.json
+++ b/public/locales/nb/tags.json
@@ -2,5 +2,7 @@
     "highlight": "Fremhevet",
     "new": "Ny",
     "canceled": "Avlyst",
-    "full": "Fullt"
+    "full": "Fullt",
+    "ongoing": "Pågår"
+
 }
