--- a/public/locales/en/eventListPage.json
+++ b/public/locales/en/eventListPage.json
@@ -2,6 +2,7 @@
   "title": "Events",
   "noEvents": "No upcoming events",
   "load-more": "Load more",
+  "noResults" : "No results...",
   "this-week": "This week",
   "next-week": "Next week",
   "later": "Later",
