Added Fund page!!

--- a/public/locales/en/layout.json
+++ b/public/locales/en/layout.json
@@ -5,6 +5,7 @@
     "jobad": "Career",
     "verv": "Verv",
     "companies": "For companies",
+    "fondet": "The fund",
     "general": "Who are we?"
   },
   "footer": {
