--- a/public/locales/nb/layout.json
+++ b/public/locales/nb/layout.json
@@ -4,6 +4,7 @@
     "events": "Arrangementer",
     "jobad": "Karriere",
     "verv": "Verv",
+    "fondet": "Fondet",
     "companies": "For bedrifter",
     "general": "Hvem er vi?"
   },
