--- a/public/locales/nb/fundPage.json
+++ b/public/locales/nb/fundPage.json
@@ -4,7 +4,7 @@
     "support": {
         "title": "Søk Fondet om støtte!",
         "intro": "Brenner du inne med et initiativ eller en idè der økonomisk støtte vil gi glede til de aller fleste medlemmene i Login? <b>Send en søknad!</b>",
-        "body": "<b>Målgruppe</b> <br> Alle grupper og medlemmer som er tilknyttet Login Linjeforening for IT kan søke fondet om støtte. Vi prioriterer søknader til nye initiativer. <br><br><b>Søknadsperioder</b> <br> En gang i semesteret vil fondsstyret kunngjøre via Login sine hovedkommunikasjonskanaler at de nå tar imot søknader. Dette vil typisk vare i en måned og skje i begynnelsen av semesteret. Behandlingstiden for søknadene vil variere avhengig av antall innkomne søknader. <br><br><b>Hvordan søke?</b> <br> Send en e-post til <a class='fund-link' href='mailto:fondet@login.no'>fondet@login.no</a> med en søknadstekst. Oppgi antall medlemmer eller studenter involvert i ditt initiativ, samt en fullstendig budsjettering av planene dine. Flere detaljer om hvordan søknaden skal utformes finnes <a class='fund-link' href='https://wiki.login.no/fondet/vedtekter/loginfondsvedtekter-1.pdf'>her <i class='logfont-wikijs'></i></a>."
+        "body": "<b>Målgruppe</b> <br> Alle grupper og medlemmer som er tilknyttet Login Linjeforening for IT kan søke fondet om støtte. Vi prioriterer søknader til nye initiativer. <br><br><b>Søknadsperioder</b> <br> En gang i semesteret vil fondsstyret kunngjøre via Login sine hovedkommunikasjonskanaler at de nå tar imot søknader. Dette vil typisk vare i en måned og skje i begynnelsen av semesteret. Behandlingstiden for søknadene vil variere avhengig av antall innkomne søknader. <br><br><b>Hvordan søke?</b> <br> Send en e-post til <a class='fund-link' href='mailto:fondet@login.no'>fondet@login.no</a> med en søknadstekst. Oppgi antall medlemmer eller studenter involvert i ditt initiativ, samt en fullstendig budsjettering av planene dine. Flere detaljer om hvordan søknaden skal utformes finnes <a class='fund-link' href='https://wiki.login.no/fondet/vedtekter/' target='_blank' rel='noopener noreferrer'>her <i class='logfont-wikijs'></i></a>."
     },
     "purpose": {
         "title": "Formål",
@@ -16,11 +16,11 @@
     },
     "meeting": {
         "title": "Møter",
-        "body": "Alle fondets møter vil bli annonsert en uke i forveien i samsvar med vedtektene gjennom Logins kommunikasjonskanaler. Fondstyret oppfordrer alle som ønsker å delta på åpent kvarter å delta på fondstyremøtene. Alle referater vil bli publisert på Fondets <a class='fund-link' href='https://wiki.login.no/fondet/referat'>wikiside <i class='logfont-wikijs'></i></a>."
+        "body": "Alle fondets møter vil bli annonsert en uke i forveien i samsvar med vedtektene gjennom Logins kommunikasjonskanaler. Fondstyret oppfordrer alle som ønsker å delta på åpent kvarter å delta på fondstyremøtene. Alle referater vil bli publisert på Fondets <a class='fund-link' href='https://wiki.login.no/fondet/referat' target='_blank' rel='noopener noreferrer'>wikiside <i class='logfont-wikijs'></i></a>."
     },
     "yield": {
         "title": "Avkastning",
-        "body": "Fondet har en langsiktig investeringsstrategi, med lav risikofaktor. Dette gjør at avkastningen er moderat, men stabil. Fondet sikter mot en årlig avkastning i tråd med globale indekser for langsiktige investeringer. Vår investeringsplan finnes i Fondets <a class='fund-link' href='https://wiki.login.no/en/fondet/styringsdokument'>styringsdokument <i class='logfont-wikijs'></i></a>."
+        "body": "Fondet har en langsiktig investeringsstrategi, med lav risikofaktor. Dette gjør at avkastningen er moderat, men stabil. Fondet sikter mot en årlig avkastning i tråd med globale indekser for langsiktige investeringer. Vår investeringsplan finnes i Fondets <a class='fund-link' href='https://wiki.login.no/en/fondet/styringsdokument' target='_blank' rel='noopener noreferrer'>styringsdokument <i class='logfont-wikijs'></i></a>."
     },
     "graph": {
         "title": "Investeringer",
@@ -29,7 +29,7 @@
     "board": {
         "title": "Fondsstyret",
         "intro": "Fondsstyret er Fondets øverste organ, og har ansvar for å forvalte Fondets midler i tråd med Fondets formål.",
-        "body": "Fondsstyret består av fem medlemmer, der alle velges ved Fondets generalforsamlinger. Ønsker du å delte i Fondsstyret? Følg med på neste generalforsamling og still til valg! <br><br> Ønsker du å vite mer? Ta kontakt på <a class='fund-link' href='mailto:fondet@login.no'>e-post</a> eller <a class='fund-link' href='https://discord.gg/login-ntnu'>Discord <i class='logfont-discord'></i></a>! Det er også mulig å slå av en prat hvis du ser oss i gangen.",
+        "body": "Fondsstyret består av fem medlemmer, der alle velges ved Fondets generalforsamlinger. Ønsker du å delte i Fondsstyret? Følg med på neste generalforsamling og still til valg! <br><br> Ønsker du å vite mer? Ta kontakt på <a class='fund-link' href='mailto:fondet@login.no'>e-post</a> eller <a class='fund-link' href='https://discord.gg/login-ntnu' target='_blank' rel='noopener noreferrer'>Discord <i class='logfont-discord'></i></a>! Det er også mulig å slå av en prat hvis du ser oss i gangen.",
         "composition": {
             "title": "Styrets Sammensetning",
             "placeholder": "Velges høsten 2024"
