--- a/public/locales/en/aboutPage.json
+++ b/public/locales/en/aboutPage.json
@@ -34,7 +34,7 @@
     "eventkom": {
       "title": "EventKom",
       "intro": "EventKom is Login's party committee, where the goal is to use up all the income Bedkom provides.",
-      "body": "EventKom is responsible for setting up social events on behalf of Login throughout the semester. We offer gatherings where students can meet across study programmes, years and classes in order to have a break from everyday study life. The aim of EventKom is to build a strong community among the IT students at the school, which you can lean on when the study life gets busy. If you have suggestions for activities, or want to join the committee, just contact us on <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>. Suggestions and feedback are welcomed, and we hope to hear from you."
+      "body": "EventKom is responsible for setting up social events on behalf of Login throughout the semester. We offer gatherings where students can meet across study programmes, years and classes in order to have a break from everyday study life. The aim of EventKom is to build a strong community among the IT students at the school, which you can lean on when the study life gets busy. If you have suggestions for activities, or want to join the committee, just contact us on <a class='link link--primary' href='https://discord.gg/login-ntnu' target='_blank' rel='noopener noreferrer'> Discord</a>. Suggestions and feedback are welcomed, and we hope to hear from you."
     },
     "tekkom": {
       "title": "TekKom",
@@ -49,7 +49,7 @@
     "ctfkom": {
       "title": "CTFkom",
       "intro": "CTFkom is Login's hacker committee. Their most important mission is to hack into ING:α's infrastructure and create havoc!",
-      "body": "CTFkom is the committee that organizes CTF events on campus. They work to ensure that all IT students at the school can develop their skills through Capture The Flag competitions. Every other week they gather at the school to solve tasks together and offer an arena where students from different study programmes, years and classes can meet and have fun together. In addition to this, we are active on Discord, and ensure that you can always stay up to date on new and interesting CTFs. In CTFkom, no question is too stupid and if you are stuck in a CTF, or just wondering about something, just send a message in the channel on <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>."
+      "body": "CTFkom is the committee that organizes CTF events on campus. They work to ensure that all IT students at the school can develop their skills through Capture The Flag competitions. Every other week they gather at the school to solve tasks together and offer an arena where students from different study programmes, years and classes can meet and have fun together. In addition to this, we are active on Discord, and ensure that you can always stay up to date on new and interesting CTFs. In CTFkom, no question is too stupid and if you are stuck in a CTF, or just wondering about something, just send a message in the channel on <a class='link link--primary' href='https://discord.gg/login-ntnu' target='_blank' rel='noopener noreferrer'> Discord</a>."
     },
     "satkom":{
       "title": "SATkom",
@@ -64,7 +64,7 @@
   },
   "publicDocs": {
     "title": "Public documents",
-    "body": "For more information and public documents, visit our <a class='standard-link standard-link--underscore-hover' href='https://wiki.login.no/en/public/docs'>wiki<i class='logfont-wikijs'></i></a>, here you can find the following types of documents:",
+    "body": "For more information and public documents, visit our <a class='link link--primary' href='https://wiki.login.no/en/public/docs' target='_blank' rel='noopener noreferrer'>wiki<i class='logfont-wikijs'></i></a>, here you can find the following types of documents:",
     "bulletPoints": {
       "agendas": "Agenda",
       "minutes": "Minutes",
