--- a/public/locales/nb/aboutPage.json
+++ b/public/locales/nb/aboutPage.json
@@ -43,7 +43,7 @@
     "eventkom": {
       "title": "EventKom",
       "intro": "EventKom er Logins party-komité hvor målet er å bruke opp alle inntektene Bedkom sørger for.",
-      "body": "EventKom har ansvar for å stelle i stand sosiale arrangement på vegne av Login gjennom semesteret. Vi tilbyr sammenkomster der studenter kan møtes på tvers av studieprogram, år og klasser for å få et avbrekk fra studiehverdagen. Målet til EventKom er å bygge et sterkt fellesskap blant IT-studentene ved skolen, som du kan lene deg på når studiehverdagen tar på. Dersom du har forslag til aktiviteter, eller ønsker å være med i komiteen er det bare å kontakte oss på <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>. Forslag og tilbakemeldinger tas imot med glede, og vi håper å høre fra deg."
+      "body": "EventKom har ansvar for å stelle i stand sosiale arrangement på vegne av Login gjennom semesteret. Vi tilbyr sammenkomster der studenter kan møtes på tvers av studieprogram, år og klasser for å få et avbrekk fra studiehverdagen. Målet til EventKom er å bygge et sterkt fellesskap blant IT-studentene ved skolen, som du kan lene deg på når studiehverdagen tar på. Dersom du har forslag til aktiviteter, eller ønsker å være med i komiteen er det bare å kontakte oss på <a class='link link--primary' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>. Forslag og tilbakemeldinger tas imot med glede, og vi håper å høre fra deg."
     },
     "tekkom": {
       "title": "TekKom",
@@ -58,7 +58,7 @@
     "ctfkom": {
       "title": "CTFkom",
       "intro": "CTFkom er Logins hacker-komité. Deres viktigste oppdrag er å hacke seg inn på ING:α sin infrastruktur og lage sprell der!",
-      "body": "CTFKom er komiteen som stiller i stand CTF arrangementer på campus. De arbeider for at alle IT- studentene ved skolen skal kunne utvikle sine ferdigheter gjennom Capture The Flag konkurranser. Annenhver uke samles de på skolen for å løse oppgaver sammen, og tilbyr en arena der studenter fra ulike studieprogram, år og klasser kan treffes og ha det gøy sammen. Utover dette er vi aktive på Discord, og sørger for at du alltid kan holde deg oppdatert på nye og interessante CTFer. I CTFkom er ingen spørsmål for dumme og dersom du sitter fast i en CTF, eller bare lurer på noe er det bare å sende en melding i kanalen på <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>."
+      "body": "CTFKom er komiteen som stiller i stand CTF arrangementer på campus. De arbeider for at alle IT- studentene ved skolen skal kunne utvikle sine ferdigheter gjennom Capture The Flag konkurranser. Annenhver uke samles de på skolen for å løse oppgaver sammen, og tilbyr en arena der studenter fra ulike studieprogram, år og klasser kan treffes og ha det gøy sammen. Utover dette er vi aktive på Discord, og sørger for at du alltid kan holde deg oppdatert på nye og interessante CTFer. I CTFkom er ingen spørsmål for dumme og dersom du sitter fast i en CTF, eller bare lurer på noe er det bare å sende en melding i kanalen på <a class='link link--primary' href=\"https://discord.gg/login-ntnu\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>."
     },
     "satkom":{
       "title": "SATkom",
@@ -73,7 +73,7 @@
   },
   "publicDocs": {
     "title": "Offentlige dokumenter",
-    "body": "For mer informasjon og offentlige dokumenter kan du besøke <a class='standard-link standard-link--underscore-hover' href='https://wiki.login.no/en/public/docs'>wikien <i class='logfont-wikijs'></i></a>, her kan du blant annet finne følgende type dokumenter:",
+    "body": "For mer informasjon og offentlige dokumenter kan du besøke <a class='link link--primary' href='https://wiki.login.no/en/public/docs' target=\"_blank\" rel=\"noreferrer\">wikien <i class='logfont-wikijs'></i></a>, her kan du blant annet finne følgende type dokumenter:",
     "bulletPoints": {
       "agendas": "Agenda",
       "minutes": "Referat",
